# judge-a-book

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/client/: mod.rs  response_types.rs
src/cmd/: fetch_covers.rs  mod.rs
